--- a/twitch.css
+++ b/twitch.css
@@ -5,10 +5,10 @@ h1{
     text-align: center;
 
 }
-img{
-    position: absolute;
-    right: 0;
-    top: 15px;
+.pic1{
+      position: absolute;
+      right: 0;
+      top: 15px;
 }
 h2{
     color: purple;
@@ -17,4 +17,44 @@ h2{
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
 }
+.pic2{
+    position: absolute;
+    right: 550px;
+    left: 550px;
 
+    border: 10px;
+}
+.intro{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align-last: left;
+    position: relative;
+    top: 255px;
+    text-align: center;
+    left: 300px;
+    right: 300px;
+
+}
+
+
+h3{
+    position: relative;
+    top: 270px;
+    color: rgb(207, 84, 207);
+}
+.gallery{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    flex-wrap: wrap;
+    margin-top: 280px;
+    margin-left: 250px;
+}
+.item{
+    display: flex;
+    align-items: center;
+}
+.item img{
+    margin-right: 15px;
+    
+    
+}
