--- a/douaa/twitch.css
+++ b/douaa/twitch.css
@@ -3,25 +3,41 @@ h1{
     font-family: 'Times New Roman', Times, serif;
     font-size: 65px;
     text-align: center;
+
 }
 .pic1{
       position: absolute;
       right: 0;
       top: 15px;
-      width: 100px;
-      height: 100px;   
 }
 h2{
     color: purple;
-    display: inline;
-    margin-top: -60px;
+    position: absolute;
+    Top: 100PX;
     font-family: 'Times New Roman', Times, serif;
     font-size: 35px;
-    text-align: center;
 }
+.pic2{
+    position: absolute;
+    right: 550px;
+    left: 550px;
+}
+.intro{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align-last: left;
+    position: relative;
+    top: 265px;
+    text-align: center;
+    left: 300px;
+    right: 300px;
+    justify-content: center;
+
+}
+
+
 h3{
     position: relative;
-    top: 80px;
+    top: 270px;
     color: rgb(207, 84, 207);
     font-size: 25px;
 }
@@ -30,7 +46,7 @@ h3{
     align-items: center;
     gap: 30px;
     flex-wrap: wrap;
-    margin-top: 90px;
+    margin-top: 280px;
     margin-left: 250px;
 }
 .item{
@@ -47,22 +63,4 @@ h3{
     gap: 20px;
     margin-top: 15px;
    align-items: center;
-}
-.ana{
-    width: 200px;
-    height: 250px;
-}
-.leftsectin{
-    padding: 25px;
-    margin: 15px;
-    display: flex;
-}
-.ana{
-    display: flex;
-    margin-left: 1000px;
-    margin-top: -140px;
-}
-.intro{
-   padding-top: 40px;
-   display: flex;
 }
